jni 和Java 基础数据的通行

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
                 cppFlags ''
             }
         }
+        ndk.abiFilters 'armeabi-v7a','arm64-v8a'
     }
 
     signingConfigs {
