学习数据类型 使用

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".cpp.second.JavaToNativeActivity"/>
         <activity android:name=".cpp.second.NativeToJavaActivity"/>
         <activity android:name=".cpp.second.JavaNativityActivity"/>
+        <activity android:name=".cpp.useDataType.UserDataTypeActivity"/>
     </application>
 
 </manifest>
