--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags ''
+                cppFlags ""
+               // cppFlags "-DANDROID_STL=c++_shared"
             }
         }
         ndk.abiFilters 'armeabi-v7a','arm64-v8a'
