--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
                // cppFlags "-DANDROID_STL=c++_shared"
             }
         }
-        ndk.abiFilters 'armeabi-v7a','arm64-v8a'
+        //ndk.abiFilters 'armeabi-v7a','arm64-v8a'
     }
 
     signingConfigs {
